refactor: FakerRepository domain 모듈로 이동 (#264)